@@ -74,7 +74,6 @@
         display: inline-block;
         height: 100%;
         width: 100%;
-        min-height: 150px;
         position: absolute;
         left: 0;
 
@@ -110,6 +109,7 @@
 @media (max-width: 992px) {
     .upload-profile-images__container {
         .upload-profile-images {
+            min-height: 101px;
             .upload-drag-item {
                 .profile-image {
                     height: 93px;
