@@ -88,7 +88,7 @@
                                         <div *ngIf="!allProfileItems.length" style="pointer-events: none; height: 100%; display: flex; align-items: center; justify-content: center;">
                                             <div class="font-8">
                                                 <span>Drag and drop images here</span>
-                                                <p class="mb-0">Max 5 images (300 x 300)</p>
+                                                <p class="mb-0">Max 5 images (300px x 300px)</p>
                                             </div>
                                         </div>
                                     </ngx-dropzone-label>
